--- a/applications/jenkins/Dockerfile
+++ b/applications/jenkins/Dockerfile
@@ -7,6 +7,7 @@ COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN jenkins-plugin-cli --plugin-file /usr/share/jenkins/ref/plugins.txt
 
 # Installing Docker CLI
+# Installing Docker CLI (latest version)
 RUN apt-get update && apt-get install -y \
     apt-transport-https \
     ca-certificates \
@@ -17,6 +18,11 @@ RUN apt-get update && apt-get install -y \
     echo "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" \
     | tee /etc/apt/sources.list.d/docker.list && \
     apt-get update && apt-get install -y docker-ce-cli
+
+# Install latest Docker CLI manually (to match host version)
+RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-24.0.6.tgz | tar xz && \
+    mv docker/docker /usr/local/bin/ && \
+    rm -rf docker
 
 # Install kubectl manually from Google Cloud Storage
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
