--- a/applications/jenkins/Dockerfile
+++ b/applications/jenkins/Dockerfile
@@ -1,10 +1,10 @@
-FROM jenkins/jenkins:lts
+FROM jenkins/jenkins:latest
 
 USER root
 
 # Pre-Install Jenkins Plugins
-COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
-RUN jenkins-plugin-cli --plugin-file /usr/share/jenkins/ref/plugins.txt
+# COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
+# RUN jenkins-plugin-cli --plugin-file /usr/share/jenkins/ref/plugins.txt
 
 # Installing Docker CLI
 # Installing Docker CLI (latest version)
