--- a/applications/puzzle/Jenkinsfile
+++ b/applications/puzzle/Jenkinsfile
@@ -13,9 +13,9 @@ node {
     env.BUILDIMG=imageName
     env.BUILD_TAG=tag
 
-    stage "Build"
-
+    stage("Build") {
         sh "docker build -t ${imageName} applications/puzzle"
+    }
 
     stage "Push"
 
