--- a/applications/kr8sswordz-pages/Jenkinsfile
+++ b/applications/kr8sswordz-pages/Jenkinsfile
@@ -13,10 +13,10 @@ node {
     env.BUILDIMG=imageName
     env.BUILD_TAG=tag
 
-    stage "Build"
-    
+    stage("Build") {
         sh "docker build -t ${imageName} applications/kr8sswordz-pages"
-    
+    }
+
     stage "Push"
 
         sh "docker push ${imageName}"
