--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -16,11 +16,11 @@ node {
         sh "docker build -t ${imageName} part1/hello-kenzan"
     }
 
-    stage "Push"
-
+    stage("Push") {
         sh "docker push ${imageName}"
+    }
 
-    stage "Deploy"
-
+    stage("Deploy") {
         sh "sed 's#__IMAGE__#'$BUILDIMG'#' part1/hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
+    }
 }
