--- a/applications/kr8sswordz-pages/Jenkinsfile
+++ b/applications/kr8sswordz-pages/Jenkinsfile
@@ -17,11 +17,11 @@ node {
         sh "docker build -t ${imageName} applications/kr8sswordz-pages"
     }
 
-    stage "Push"
-
+    stage("Push") {
         sh "docker push ${imageName}"
+    }
 
-    stage "Deploy"
-
+    stage("Deploy") {
         kubernetesDeploy configs: "applications/kr8sswordz-pages/k8s/*.yaml", kubeconfigId: 'kenzan_kubeconfig'
+    }
 }
