--- a/applications/monitor-scale/Jenkinsfile
+++ b/applications/monitor-scale/Jenkinsfile
@@ -17,11 +17,11 @@ node {
         sh "docker build -t ${imageName} applications/monitor-scale"
     }
 
-    stage "Push"
-
+    stage("Push") {
         sh "docker push ${imageName}"
+    }
 
-    stage "Deploy"
-
+    stage("Deploy") {
         kubernetesDeploy configs: "applications/${appName}/k8s/*.yaml", kubeconfigId: 'kenzan_kubeconfig'
+    }
 }
