--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -12,22 +12,24 @@ node {
     imageName = "${registryHost}${appName}:${tag}"
     env.BUILDIMG=imageName
 
+    echo "Commit ID: ${tag}"
+    echo "Docker Image: ${imageName}"
+
     stage("Build") {
+        echo "Building Docker image..."
         sh "docker build -t ${imageName} part1/hello-kenzan"
+        echo "Build complete."
     }
 
     stage("Push") {
+        echo "Pushing Docker image to registry..."
         sh "docker push ${imageName}"
+        echo "Push complete."
     }
 
     stage("Deploy") {
-        sh 
-        if kubectl get svc hello-kenzan > /dev/null 2>&1; then
-            echo "Service hello-kenzan already exists."
-        else
-            echo "Service hello-kenzan does not exist, it may need to be created."
-        fi
-
-        "sed 's#__IMAGE__#'$BUILDIMG'#' part1/hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
+        echo "Deploying application with image: ${BUILDIMG}"
+        sh "sed 's#__IMAGE__#'$BUILDIMG'#' part1/hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
+        echo "Deployment applied."
     }
 }
