--- a/applications/jenkins/Dockerfile
+++ b/applications/jenkins/Dockerfile
@@ -1,36 +1,23 @@
-FROM jenkins/jenkins:latest
+FROM jenkins/jenkins:lts
 
 USER root
 
-# Pre-Install Jenkins Plugins
-# COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
-# RUN jenkins-plugin-cli --plugin-file /usr/share/jenkins/ref/plugins.txt
-
-# Installing Docker CLI
-# Installing Docker CLI (latest version)
 RUN apt-get update && apt-get install -y \
     apt-transport-https \
     ca-certificates \
     curl \
     gnupg \
-    lsb-release && \
-    curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
-    echo "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" \
-    | tee /etc/apt/sources.list.d/docker.list && \
-    apt-get update && apt-get install -y docker-ce-cli
+    lsb-release \
+    && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null \
+    && apt-get update && apt-get install -y docker-ce-cli containerd.io
 
-# Install latest Docker CLI manually (to match host version)
-RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-24.0.6.tgz | tar xz && \
-    mv docker/docker /usr/local/bin/ && \
-    rm -rf docker
-
-# Install kubectl manually from Google Cloud Storage
-RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
-    install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && \
-    rm -f kubectl
+RUN curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg \
+    && echo "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /" | tee /etc/apt/sources.list.d/kubernetes.list > /dev/null \
+    && apt-get update && apt-get install -y kubectl
 
 # Grant jenkins user group access to /var/run/docker.sock
-RUN groupadd -g 999 docker && usermod -aG docker jenkins
-RUN chmod 666 /var/run/docker.sock || true
+RUN groupadd -g 999 docker || true && usermod -aG docker jenkins
+RUN chown root:docker /var/run/docker.sock || true && chmod 660 /var/run/docker.sock || true
 
 USER jenkins
