--- a/applications/kr8sswordz-pages/Dockerfile
+++ b/applications/kr8sswordz-pages/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:7
+FROM node:18
 
 # Create app directory
 RUN mkdir -p /usr/src/app
@@ -7,7 +7,7 @@ WORKDIR /usr/src/app
 # Install app dependencies
 COPY package.json gulpfile.js yarn.lock /usr/src/app/
 
-RUN yarn --pure-lockfile
+RUN yarn --network-timeout 100000 --pure-lockfile
 
 # Bundle app source
 COPY . /usr/src/app
