--- a/applications/kr8sswordz-pages/package.json
+++ b/applications/kr8sswordz-pages/package.json
@@ -60,6 +60,7 @@
     "redux-devtools-extension": "1.0.0",
     "redux-immutable-state-invariant": "1.2.4",
     "redux-thunk": "2.1.0",
+    "sass": "^1.85.1",
     "showdown": "^1.6.0",
     "socket.io-client": "^1.7.3",
     "thunk": "0.0.1",
@@ -87,12 +88,12 @@
     "eslint-plugin-react": "6.2.2",
     "eslint-watch": "2.1.14",
     "file-loader": "^0.10.0",
-    "gulp": "3.9.1",
+    "gulp": "^5.0.0",
     "gulp-connect": "^5.0.0",
     "gulp-imagemin": "3.0.3",
     "gulp-plumber": "1.1.0",
     "gulp-postcss": "6.2.0",
-    "gulp-sass": "2.3.2",
+    "gulp-sass": "5.1.0",
     "gulp-sourcemaps": "1.6.0",
     "install": "0.8.1",
     "json-loader": "^0.5.4",
