--- a/applications/monitor-scale/package.json
+++ b/applications/monitor-scale/package.json
@@ -22,8 +22,8 @@
     "async": "2.2.0",
     "body-parser": "^1.18.3",
     "cors": "2.8.3",
+    "etcd3": "^1.1.2",
     "express": "^4.16.4",
-    "node-etcd": "^7.0.0",
     "request": "^2.88.0",
     "socket.io": "1.7.3"
   }
