--- a/applications/puzzle/package.json
+++ b/applications/puzzle/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "etcd3": "^1.1.2",
     "helmet": "^1.3.0",
-    "loopback": "^3.0.0",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^4.0.0",
-    "loopback-connector-mongodb": "^3.0.1",
-    "node-etcd": "^5.0.3",
+    "loopback": "3.15.0",
+    "loopback-boot": "^3.3.1",
+    "loopback-component-explorer": "^6.5.1",
+    "loopback-connector-mongodb": "^6.0.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^1.0.1",
     "toastr": "^2.1.2"
@@ -23,6 +23,7 @@
   "devDependencies": {
     "eslint": "^2.13.1",
     "eslint-config-loopback": "^4.0.0",
+    "node-gyp": "^11.1.0",
     "nsp": "^2.1.0"
   },
   "repository": {
