--- a/manifests/monitor-scale-serviceaccount.yaml
+++ b/manifests/monitor-scale-serviceaccount.yaml
@@ -8,18 +8,15 @@ metadata:
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
-  namespace: default
-  name: puzzle-scaler
+  name: puzzle-scaler-cluster-role
 rules:
 - apiGroups:
-  - "extensions"
+  - "apps"
   resources:
   - deployments
   - deployments/scale
-  resourceNames:
-  - "puzzle"
   verbs:
   - update
   - get
@@ -27,14 +24,13 @@ rules:
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: monitor-scale-puzzle-scaler
-  namespace: default
+  name: monitor-scale-puzzle-clusterrolebinding
 roleRef:
-  kind: Role
-  name: puzzle-scaler
   apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: puzzle-scaler-cluster-role
 subjects:
 - kind: ServiceAccount
   name: monitor-scale
