--- a/applications/puzzle/Jenkinsfile
+++ b/applications/puzzle/Jenkinsfile
@@ -10,18 +10,29 @@ node {
     appName = "puzzle"
     registryHost = "192.168.49.2:30400/"
     imageName = "${registryHost}${appName}:${tag}"
+    latestImage = "${registryHost}${appName}:latest"
+
     env.BUILDIMG=imageName
     env.BUILD_TAG=tag
 
     stage("Build") {
-        sh "docker build -t ${imageName} applications/puzzle"
+        //sh "docker build -t ${imageName} applications/puzzle"
+        sh "docker build -t ${imageName} -t ${latestImage} -f applications/puzzle/Dockerfile applications/puzzle"
+        println "Build docker completed."
     }
 
     stage("Push") {
         sh "docker push ${imageName}"
+        sh "docker push ${latestImage}"
     }
 
     stage("Deploy") {
-        kubernetesDeploy configs: "applications/${appName}/k8s/*.yaml", kubeconfigId: 'kenzan_kubeconfig'
+        //kubernetesDeploy configs: "applications/${appName}/k8s/*.yaml", kubeconfigId: 'kenzan_kubeconfig'
+        sh "echo Deploying application..."
+        
+        sh "kubectl config view"
+        sh "kubectl get nodes"
+        sh "kubectl apply -f applications/${appName}/k8s/"
+        sh "kubectl rollout restart deployment/${appName}"
     }    
 }
