--- a/applications/puzzle/Jenkinsfile
+++ b/applications/puzzle/Jenkinsfile
@@ -4,9 +4,10 @@ node {
 
     env.DOCKER_API_VERSION="1.24"
 
-    sh "git rev-parse --short HEAD > commit-id"
+    //sh "git rev-parse --short HEAD > commit-id"
 
-    tag = readFile('commit-id').replace("\n", "").replace("\r", "")
+    //tag = readFile('commit-id').replace("\n", "").replace("\r", "")
+    tag = sh(script: "git rev-parse --short HEAD", returnStdout: true).trim()
     appName = "puzzle"
     registryHost = "192.168.49.2:30400/"
     imageName = "${registryHost}${appName}:${tag}"
