--- a/applications/puzzle/k8s/deployment.yaml
+++ b/applications/puzzle/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         tier: puzzle
     spec:
       containers:
-      - image: 192.168.49.2:30400/puzzle:$BUILD_TAG
+      - image: 192.168.49.2:30400/puzzle:${BUILD_TAG}
         name: puzzle
         imagePullPolicy: Always
         lifecycle:
