--- a/applications/puzzle/Jenkinsfile
+++ b/applications/puzzle/Jenkinsfile
@@ -33,8 +33,8 @@ node {
         
         sh "kubectl config view"
         sh "kubectl get nodes"
-        //sh "sed -i 's|\\$BUILD_TAG|${env.BUILD_TAG}|g' applications/${appName}/k8s/deployment.yaml"
-        
+        sed -i 's|\\$BUILD_TAG|${tag}|g' applications/${appName}/k8s/deployment.yaml
+    
         sh "kubectl apply -f applications/${appName}/k8s/"
         sh "kubectl rollout restart deployment/${appName}"
     }    
