--- a/manifests/monitor-scale-serviceaccount.yaml
+++ b/manifests/monitor-scale-serviceaccount.yaml
@@ -12,14 +12,23 @@ kind: ClusterRole
 metadata:
   name: puzzle-scaler-cluster-role
 rules:
-- apiGroups:
-  - "apps"
-  resources:
-  - deployments
-  - deployments/scale
-  verbs:
-  - update
-  - get
+  - apiGroups:
+    - "apps"
+    resources:
+      - deployments
+      - deployments/scale
+    verbs:
+      - update
+      - get
+  - apiGroups:
+    - ""
+    resources:
+      - pods
+    verbs:
+      - get
+      - list
+      - watch
+
 
 ---
 
