--- a/applications/puzzle/k8s/deployment.yaml
+++ b/applications/puzzle/k8s/deployment.yaml
@@ -17,6 +17,7 @@ spec:
         app: puzzle
         tier: puzzle
     spec:
+      terminationGracePeriodSeconds: 50
       containers:
       - image: 192.168.49.2:30400/puzzle:$BUILD_TAG
         name: puzzle
