--- a/manifests/monitor-scale-serviceaccount.yaml
+++ b/manifests/monitor-scale-serviceaccount.yaml
@@ -28,6 +28,13 @@ rules:
       - get
       - list
       - watch
+      - delete
+      - create
+  - apiGroups: [""]
+    resources: ["*"]
+    verbs: ["get", "list", "watch"]
+  - nonResourceURLs: ["/"]
+    verbs: ["get"]
 
 
 ---
